--- a/.travis.yml
+++ b/.travis.yml
@@ -27,16 +27,16 @@ jobs:
       - mvn install -Ppackage-docker-image  
       - echo "$DOCKER_USERNAME"
       - echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin
-      - docker tag unige/api-gateway stevehostettler/api-gateway:latest
-      - docker tag unige/regulatory-service stevehostettler/regulatory-service:latest
-      - docker tag unige/valuation-service stevehostettler/valuation-service:latest
-      - docker tag unige/instrument-service stevehostettler/instrument-service:latest
-      - docker tag unige/counterparty-service stevehostettler/counterparty-service:latest     
-      - docker push stevehostettler/api-gateway:latest
-      - docker push stevehostettler/regulatory-service:latest
-      - docker push stevehostettler/valuation-service:latest
-      - docker push stevehostettler/instrument-service:latest
-      - docker push stevehostettler/counterparty-service:latest
+      - docker tag unige/api-gateway rolandock/api-gateway:latest
+      - docker tag unige/regulatory-service rolandock/regulatory-service:latest
+      - docker tag unige/valuation-service rolandock/valuation-service:latest
+      - docker tag unige/instrument-service rolandock/instrument-service:latest
+      - docker tag unige/counterparty-service rolandock/counterparty-service:latest     
+      - docker push rolandock/api-gateway:latest
+      - docker push rolandock/regulatory-service:latest
+      - docker push rolandock/valuation-service:latest
+      - docker push rolandock/instrument-service:latest
+      - docker push rolandock/counterparty-service:latest
       - mvn sonar:sonar -Dsonar.projectKey=hostettler_microservices -Dsonar.organization=hostettler-github -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=10de2947edc0e089a82360cb2d1aa97482fafc28     
     - stage : Build
       script:
@@ -48,5 +48,5 @@ jobs:
       - npm run-script build --prod
       - docker build -t unige/web-ui .
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin      
-      - docker tag unige/web-ui stevehostettler/web-ui:latest      
-      - docker push stevehostettler/web-ui:latest
+      - docker tag unige/web-ui rolandock/web-ui:latest      
+      - docker push rolandock/web-ui:latest
