--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,8 @@ jobs:
       - docker push rolandock/valuation-service:latest
       - docker push rolandock/instrument-service:latest
       - docker push rolandock/counterparty-service:latest
-      - mvn sonar:sonar -Dsonar.projectKey=rolandogdp_microservices -Dsonar.organization=rolandogdp -Dsonar.host.url=https://sonarcloud.io     
+      - sonar:sonar -Dsonar.projectKey=rolandogdp_microservices
+   #   - mvn sonar:sonar -Dsonar.projectKey=rolandogdp_microservices -Dsonar.organization=rolandogdp -Dsonar.host.url=https://sonarcloud.io     
     
     - stage : Build
       script:
