--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,9 @@ jobs:
     - stage : Build
       script:
       - mvn install -Ppackage-docker-image  
-      - echo "$DOCKER_USERNAME"
-      - echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin
+      # - echo "$DOCKER_USERNAME"
+      # - echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin
+      - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - docker tag unige/api-gateway nexsin/api-gateway:latest
       - docker tag unige/regulatory-service nexsin/regulatory-service:latest
       - docker tag unige/valuation-service nexsin/valuation-service:latest
